# runalyze

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  app.py  app.sh  pyproject.toml
data/: fcr_data.csv  garmin.db  hrv_data.csv  training_data.csv  vo2max_data.csv
src/: config.yaml  main.py
src/runanalyze/controllers/: __init__.py  activity_controller.py  dashboard_controller.py
src/runanalyze/core/: config.py  log.py
src/runanalyze/core/config/: __init__.py  config.py
src/runanalyze/core/database/: __init__.py  (+1 more)
src/runanalyze/models/: activity.py  activity_sample.py  activity_weather.py  daily_metrics.py
src/runanalyze/routes/: __init__.py  activity_routes.py  dashboard_routes.py
src/runanalyze/services/: __init__.py  activity_service.py  daily_metrics_service.py  daily_metrics_sync.py  db_initializer.py  garmin_sync.py  weather_service.py
src/utilities/: full_training_report.py
static/css/: activities.css  styles.css  workouts.css
static/js/: data-utils.js  data.js  distance-app.js  distance-chart.js  distance-weekly-app.js  distance-weekly-chart.js  duration-app.js  duration-chart.js  duration-weekly-app.js  duration-weekly-chart.js  fcr-app.js  fcr-chart.js  health.js  hrv-app.js  hrv-chart.js  overview.js  pmc-app.js  pmc-chart.js  tl-app.js  tl-chart.js  training.js  tss-app.js  tss-chart.js  tss-weekly-app.js  tss-weekly-chart.js  vo2max-app.js  vo2max-chart.js  workouts.js
templates/: activities.html  activity_detail.html  base.html  footer.html  header.html  health.html  index.html  overview.html  sidebar.html  training.html
