[project]
authors = [
  {name = "Salvatore D'Angelo", email = "sasadangelo@gmail.com"},
]
dependencies = [
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "PyYAML==6.0.2",
  "garminconnect==0.3.3",
]
description = "RunAnalyze - A comprehensive running analytics and training management tool"
keywords = ["running", "analytics", "training", "hrv", "vo2max", "garmin"]
name = "runanalyze"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.1.0"

[dependency-groups]
dev = [
  "python-dotenv==1.2.2",
  "bandit>=1.8.6",
  "coverage>=7.11.0",
  "detect-secrets>=1.5.0",
  "mypy>=1.18.2",
  "poethepoet>=0.37.0",
  "pre-commit>=3.8.0",
  "pytest>=8.4.2",
  "radon>=6.0.1",
  "ruff>=0.8.0",
]

[tool.ruff]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "*.egg-info",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
ignore = []
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
lines-between-types = 0
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
